# ArkoseRendererThesis

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  setup.sh
assets/: .gitignore
assets/Barrel/: barrel_contours.json  barrel_lowres.gltf  barrel_spheres.json
assets/BarrelYellow/: barrel_yellow.gltf  barrel_yellow_contours.json  barrel_yellow_lowres.gltf  barrel_yellow_spheres.json
assets/Bunny/: bunny.gltf  bunny_bad_lowres.gltf  bunny_contours.json  bunny_lowres.gltf  bunny_lowres_spheres.json  bunny_spheres.json
assets/CornellBox/: CornellBox.gltf  CornellBoxFilled.gltf
assets/PicaPicaMiniDiorama/: README.txt
assets/PicaPicaPalletStack/: scene.gltf
assets/Scenes/: barrel.json  proxy-test.json  sponza.json  test.json
assets/Scenes/eval/: bunny_test.json  rocky_spheres.json  small.json  small_contours.json  small_spheres.json  small_triangles.json
cmake/: FindVulkanSDK.cmake
shaders/: brdf.glsl  common.glsl  compile_shaders.bat  compile_shaders.sh  example.frag  example.vert  finalPostFx.frag  finalPostFx.vert  forward.frag  forward.vert  forwardSlow.frag  forwardSlow.vert  intersections.glsl  lighting.glsl  shadowSun.vert  spherical.glsl
shaders/light/: shadow.vert
shaders/rt-ao/: raygen.rgen
shaders/rt-diffuseGI/: averageAccum.comp  closestHit.rchit  contour.rchit  contour.rint  raygen.rgen  sphere.rchit  sphere.rint
shaders/rt-firsthit/: closestHit.rchit  contour.rchit  contour.rint  miss.rmiss  raygen.rgen  sphere.rchit  sphere.rint
shaders/rt-reflections/: closestHit.rchit  miss.rmiss  raygen.rgen
shaders/shared/: CameraState.h  ForwardData.h  LightData.h  RTData.h  camera_state.h
src/: common.h  main.cpp  resourceid.h
src/app/: TestApp.cpp  TestApp.h
src/apps/: TestApp.cpp  TestApp.h
src/backend/: Backend.cpp  Backend.h  CommandList.h  ShaderManager.cpp  ShaderManager.h  mesh.h
src/backend/vk/: VulkanBackend.cpp  VulkanBackend.h  common-vk.h
src/backend/vulkan/: VulkanBackend.cpp  VulkanBackend.h  VulkanCommandList.cpp  VulkanCommandList.h  VulkanContext.cpp  VulkanContext.h  VulkanCore.cpp  VulkanCore.h  VulkanQueueInfo.h  VulkanRTX.cpp  VulkanRTX.h  common-vk.h
src/frontend/: App.cpp  App.h  ApplicationState.h  Buffer.h  CommandQueue.h  CommandSubmitter.cpp  CommandSubmitter.h  Commands.h  RenderPass.cpp  RenderPass.h  ResourceManager.cpp  ResourceManager.h  Resources.cpp  Resources.h
src/rendering/: App.cpp  App.h  AppResourceManager.cpp  AppResourceManager.h  ApplicationState.h  Backend.h  CommandList.h  CommandSubmitter.cpp  CommandSubmitter.h  Commands.h  GpuPipeline.cpp  GpuPipeline.h  Registry.cpp  Registry.h  RenderGraph.cpp  RenderGraph.h  RenderGraphNode.cpp  RenderGraphNode.h  RenderPass.cpp  RenderPass.h  RenderState.h  ResourceChange.h  ResourceManager.cpp  ResourceManager.h  Resources.cpp  Resources.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  StaticResourceManager.cpp  StaticResourceManager.h
src/rendering/nodes/: CameraUniformNode.cpp  CameraUniformNode.h  FinalPostFxNode.cpp  FinalPostFxNode.h  ForwardRenderNode.cpp  ForwardRenderNode.h  ForwardRendererNode.cpp  ForwardRendererNode.h  RTAccelerationStructures.cpp  RTAccelerationStructures.h  RTAmbientOcclusion.cpp  RTAmbientOcclusion.h  RTDiffuseGINode.cpp  RTDiffuseGINode.h  RTFirstHitNode.cpp  RTFirstHitNode.h  RTReflectionsNode.cpp  RTReflectionsNode.h  RTXReflectionsNode.cpp  RTXReflectionsNode.h  SceneUniformNode.cpp  SceneUniformNode.h  ShadowMapNode.cpp  ShadowMapNode.h  SlowForwardRenderNode.cpp  SlowForwardRenderNode.h
src/utility/: ArenaAllocator.cpp  ArenaAllocator.h  Badge.h  CapList.h  Extent.h  FileIO.h  FpsCamera.cpp  FpsCamera.h  FrameAllocator.cpp  FrameAllocator.h  GlobalState.cpp  GlobalState.h  GltfModel.cpp  GltfModel.h  Input.cpp  Input.h  Logging.h  Model.h  PersistentIndexedList.h  Random.cpp  Random.h  Scene.cpp  Scene.h  copying.h  fileio.cpp  fileio.h  logging.h  mathkit.h  util.h
src/utility/models/: GltfModel.cpp  GltfModel.h  SphereSetModel.cpp  SphereSetModel.h  VoxelContourModel.cpp  VoxelContourModel.h
